--- a/presentation/Final Project Presentation.qmd
+++ b/presentation/Final Project Presentation.qmd
@@ -68,6 +68,10 @@ top_10_movies <- grouped_data %>%
 
 ## ABOUT SCRAPING AND CODES…
 
+![](tmdb.png)
+
+------------------------------------------------------------------------
+
 ![](picture1.png)
 
 ------------------------------------------------------------------------
